# docx-date-replacer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.bat  Техническое задание.md
src/: __init__.py  config.py  date_replacer.py  docx_processor.py  gui.py  main.py
tests/: README.md  __init__.py  test_date_replacer.py  test_docx_processor.py  test_integration.py
